# AndroidCompilations

./: README.md  build.gradle  settings.gradle
Compilations/: build.gradle  settings.gradle
Compilations/VisitRemoteService/: build.gradle
Compilations/acceptbroadcast/: build.gradle
Compilations/animal/: build.gradle
Compilations/app/: build.gradle
Compilations/bluetoothdemo/: build.gradle
Compilations/customviewdemo/: build.gradle
VisitRemoteService/: build.gradle
VisitRemoteService/src/main/: AndroidManifest.xml
acceptbroadcast/src/main/: AndroidManifest.xml
androidcontent/: README.md  build.gradle
androidcontent/src/main/: AndroidManifest.xml
animal/: build.gradle
animal/src/main/: AndroidManifest.xml
app/: build.gradle
bluetoothdemo/: build.gradle
broadcastreceiverdemo/: build.gradle
conentprovierdemo/: build.gradle
customviewdemo/: build.gradle
frame/: README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
kotlin/: README.md  build.gradle
multimediademo/: build.gradle
mylibrary/: build.gradle
nativelibrary/: build.gradle
nativelibrary/src/main/: AndroidManifest.xml  CMakeLists.txt
nativelibrary/src/main/java/com/soul/nativelibrary/: JniTest.java
nativelibrary/src/main/jni/src/: demo.cpp
nativelibrary/src/main/jni/src/udp/: autoai_log.h  client.cpp  client.h  server.cpp  server.h
nativelibrary/src/main/jni/src/utils/: jni_simple_type.h  msg_queue.h
nativelibrary/src/main/res/values/: strings.xml
rxandroid/: build.gradle  proguard-rules.pro
servicedemo/: build.gradle
(+563 files in other folders)
